--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
                 overflow-x: hidden;
             }    
             #TopBanner{
-                width: 100%;
+                width: 108%;
                 height: auto;
-                position: absolute;
+                position: relative;
                 z-index: 1;
-                top: 0%;
-                left: 0%;
+                top: -8px;
+                left: -8px;
                 overflow-x: hidden;
             }    
             .logoBox{
