--- a/index.html
+++ b/index.html
@@ -117,9 +117,10 @@
                 text-align: left;
             }  
             #halftone{
-                float: left;
-                left:20px;
-                width:17%;
+                position: relative;
+                left:2%;
+                width:14%;
+                top:4%;
             }
         </style>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
@@ -145,6 +146,15 @@
                 var curWidth = element.width();
                 element.width(curWidth * 2);
             });
+            $('#canvas').mousedown(function(){          
+                $(this).css('cursor','move');
+                return false;       
+            });
+            window.addEventListener("keydown", function(e) {
+                if(["ArrowUp","ArrowDown","ArrowLeft","ArrowRight"].indexOf(e.code) > -1) {
+                    e.preventDefault();
+                }
+            }, false);
         </script>
         <button class="BannerButtons ArticlesButton">Articles</button>
         <button class="BannerButtons CampaignsButton">Campaigns</button>
