--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <title>Environmental Action</title>
         <meta charset="utf-8">
         <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
+        <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
         <style>
             Body {
                 background-image: url('images/wiped.svg');
@@ -118,9 +119,16 @@
             }  
             #halftone{
                 position: relative;
-                left:2%;
+                left:1.7%;
                 width:14%;
-                top:4%;
+                top:1%;
+            }
+            .introduction{
+                position: relative;
+                float: left;
+                width: 60%;
+                padding: 1%;
+                font-family: Montserrat;
             }
         </style>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
@@ -139,6 +147,10 @@
                 <img src="images/BrandText.svg" alt="Environmental Action Club Logo">
             </div>
         </a>
+        <div class="introduction">
+            <h2>Introduction</h2>
+            <p>We are a passionate team of youth environmental activists, primarily from Saratoga High School. One of our focuses are environmentally impactful bills, such as SB499, AB1423, and SB676.</p>
+        </div>
         <script>
             <!--JQuery imported because convenient-->
             $(document).ready(function() {
