--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
                 background-repeat: no-repeat;
                 overflow-y: scroll;
                 overflow-x: hidden;
+                font-size: 100%;
             }    
             #TopBanner{
                 width: 108%;
@@ -117,18 +118,20 @@
             .para1{
                 text-align: left;
             }  
-            #halftone{
-                position: relative;
-                left:1.7%;
-                width:14%;
-                top:1%;
-            }
             .introduction{
                 position: relative;
                 float: left;
                 width: 60%;
                 padding: 1%;
                 font-family: Montserrat;
+                font-size: 3rem;
+            }
+            #halftone{
+                position: relative;
+                float: left;
+                left:1.7%;
+                width:14%;
+                top:1%;
             }
         </style>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
