--- a/index.html
+++ b/index.html
@@ -121,10 +121,12 @@
             .introduction{
                 position: relative;
                 float: left;
-                width: 60%;
+                left: 3%;
+                width: 50%;
                 padding: 1%;
                 font-family: Montserrat;
-                font-size: 3rem;
+                font-size: clamp(0.83rem, 1.4vw, 4.5rem);
+                line-height:1.4;
             }
             #halftone{
                 position: relative;
@@ -151,8 +153,8 @@
             </div>
         </a>
         <div class="introduction">
-            <h2>Introduction</h2>
-            <p>We are a passionate team of youth environmental activists, primarily from Saratoga High School. One of our focuses are environmentally impactful bills, such as SB499, AB1423, and SB676.</p>
+            <h2 style = "font-weight:bold;">Introduction</h2>
+            <p><br />We are a passionate team of youth environmental activists, primarily from Saratoga High School. One of our focuses are environmentally impactful bills, such as SB499, AB1423, and SB676.</p>
         </div>
         <script>
             <!--JQuery imported because convenient-->
