--- a/index.html
+++ b/index.html
@@ -121,12 +121,17 @@
             .introduction{
                 position: relative;
                 float: left;
-                left: 3%;
-                width: 50%;
+                left: 2.7%;
+                top: -1.5%;
+                width: 43%;
                 padding: 1%;
                 font-family: Montserrat;
                 font-size: clamp(0.83rem, 1.4vw, 4.5rem);
-                line-height:1.4;
+                line-height:1.37;
+            }
+            .introTitle{
+                font-weight:bold;
+                font-size: clamp(1.16rem, 1.96vw, 6.3rem);
             }
             #halftone{
                 position: relative;
@@ -153,8 +158,8 @@
             </div>
         </a>
         <div class="introduction">
-            <h2 style = "font-weight:bold;">Introduction</h2>
-            <p><br />We are a passionate team of youth environmental activists, primarily from Saratoga High School. One of our focuses are environmentally impactful bills, such as SB499, AB1423, and SB676.</p>
+            <h2 class = "introduction introTitle">Introduction</h2>
+            <p>We are a passionate team of youth environmental activists, primarily from Saratoga High School. One of our focuses are environmentally impactful bills, such as SB499, AB1423, and SB676.</p>
         </div>
         <script>
             <!--JQuery imported because convenient-->
