--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                 position: relative;
                 float: left;
                 left: 2.7%;
-                top: -1.5%;
+                top: -0.2%;
                 width: 43%;
                 padding: 1%;
                 font-family: Montserrat;
@@ -130,7 +130,8 @@
                 line-height:1.37;
             }
             .introTitle{
-                font-weight:bold;
+                position: relative;
+                font-weight: 900;
                 font-size: clamp(1.16rem, 1.96vw, 6.3rem);
             }
             #halftone{
@@ -158,7 +159,7 @@
             </div>
         </a>
         <div class="introduction">
-            <h2 class = "introduction introTitle">Introduction</h2>
+            <h2 class = "introTitle">Introduction</h2>
             <p>We are a passionate team of youth environmental activists, primarily from Saratoga High School. One of our focuses are environmentally impactful bills, such as SB499, AB1423, and SB676.</p>
         </div>
         <script>
