--- a/index.html
+++ b/index.html
@@ -165,10 +165,14 @@
         <script>
             <!--JQuery imported because convenient-->
             $(document).ready(function() {
+                $(window).trigger('resize');
+            });
+            $(window).on('resize',function() 
                 var element = $(".BannerButtons");
                 var curWidth = element.width();
                 element.width(curWidth * 2);
             });
+            
             $('#canvas').mousedown(function(){          
                 $(this).css('cursor','move');
                 return false;       
