--- a/index.html
+++ b/index.html
@@ -72,9 +72,8 @@
                 border: 4px solid #37512cff;
                 background-color:transparent;
                 color: #37512cff;
-                top:4.2vw;
-                font-size: 2rem;
-                height: 120h;
+                top:8vh;
+                font-size: 1.5vw;
                 font-family: 'Roboto';
                 text-align: center;
                 display: inline-block;
