--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
             }
             <!--JQuery imported because convenient-->
             $(document).ready(adjustSize);
-            $(window).on('resize',adjustSize);
+            <!--$(window).on('resize',adjustSize);-->
             function adjustSize() {
                 var element = $(".BannerButtons");
                 var curWidth = element.width();
