--- a/index.html
+++ b/index.html
@@ -162,18 +162,16 @@
             <p>We are a passionate team of youth environmental activists, primarily from Saratoga High School. One of our focuses are environmentally impactful bills, such as SB499, AB1423, and SB676.</p>
         </div>
         <script>
-            window.onbeforeunload = function () {
-                window.scrollTo(0, 0);
-            }
             <!--JQuery imported because convenient-->
-            $(document).ready(adjustSize);
-            $(window).on('resize',zoomAdjust);
+            $(document).ready(onStart);
             var originalWindow = window.innerWidth();
-            function adjustSize() {
+            function onStart() {
+                window.scrollTo(0, 0);
                 var element = $(".BannerButtons");
                 var curWidth = element.width();
                 element.width(curWidth * 2);
             }
+            $(window).on('resize',zoomAdjust);
             function zoomAdjust(){
                 var element = $(".BannerButtons");
                 var curWidth = element.width();
