--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
                 background-image: url('images/wiped.svg');
                 background-position: center top;
                 height: 222.280334728vw;
+                min-height: 222.280334728vw;
                 background-size: cover;
                 background-attachment: scroll;
                 background-repeat: no-repeat;
