--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
                 background-position: center top;
                 height: 222.280334728vw;
                 min-height: 222.280334728vw;
+                resize: horizontal;
                 background-size: cover;
                 background-attachment: scroll;
                 background-repeat: no-repeat;
