--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
                 background-image: url('images/wiped.svg');
                 background-position: center top;
                 height: 222.280334728vw;
-                min-height: 222.280334728vw;
-                resize: horizontal;
+                min-height: 3000px;
                 background-size: cover;
                 background-attachment: scroll;
                 background-repeat: no-repeat;
@@ -127,7 +126,7 @@
                 width: 43%;
                 padding: 1%;
                 font-family: Montserrat;
-                font-size: clamp(0.83rem, 1.4vw, 4.5rem);
+                font-size: clamp(1rem, 1.4vw, 4.5rem);
                 line-height:1.37;
             }
             .introTitle{
