--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                 }
             }
             @media only screen and (max-width: 769px) {
-                .BannerItems {
+                .BannerButtons {
                     display: none;
                 }
             }
@@ -140,6 +140,11 @@
                 left:1.7%;
                 width:14%;
                 top:1%;
+            }
+            @media only screen and (max-width: 1100px) {
+                #halftone {
+                    display: none;
+                }
             }
         </style>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
