--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                 background-image: url('images/wiped.svg');
                 background-position: center top;
                 height: 222.280334728vw;
-                min-height: 3000px;
+                min-height: 2600px;
                 background-size: cover;
                 background-attachment: scroll;
                 background-repeat: no-repeat;
@@ -22,6 +22,7 @@
             }    
             #TopBanner{
                 width: 108%;
+                min-width: 1250px;
                 height: auto;
                 position: relative;
                 z-index: 1;
@@ -141,9 +142,12 @@
                 width:14%;
                 top:1%;
             }
-            @media only screen and (max-width: 1100px) {
+            @media only screen and (max-width: 1000px) {
                 #halftone {
                     display: none;
+                }
+                .introduction{
+                    width: 100%;
                 }
             }
         </style>
