--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
                 word-wrap: break-word;
                 margin-right: 1.5vw;
                 width:11vw;
+                min-width:173px;
             }
             .BannerButtons:hover {
                 box-shadow: 0 7px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
@@ -173,21 +174,9 @@
         </div>
         <script>
             <!--JQuery imported because convenient-->
-            $(document).ready(onStart);
-            var originalWindow = window.innerWidth();
-            function onStart() {
-                window.scrollTo(0, 0);
-                /*var element = $(".BannerButtons");
-                var curWidth = element.width();
-                element.width(curWidth * 2);*/
-            }
-            /*$(window).on('resize',zoomAdjust);
-            function zoomAdjust(){
-                var element = $(".BannerButtons");
-                var curWidth = element.width();
-                element.width(curWidth * (window.innerWidth()/originalWindow));
-            }*/
-            
+            $(document).ready(function(){
+                $(window).scrollTop(0);
+            });
             $('#canvas').mousedown(function(){          
                 $(this).css('cursor','move');
                 return false;       
