--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                 return false;       
             });
             window.addEventListener("keydown", function(e) {
-                if(e.key.startsWith("ArrowL") || e.key.startsWith("ArrowR")) {
+                if(e.key.startsWith("Arrow")) {
                     e.preventDefault();
                 }
             }, false);
