--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 background-color:transparent;
                 color: #37512cff;
                 top:8.1vh;
-                font-size: 1.5vw;
+                font-size: clamp(1rem, 1.5vw,5.5rem);
                 font-family: 'Roboto';
                 text-align: center;
                 display: inline-block;
@@ -88,7 +88,6 @@
                 word-wrap: break-word;
                 margin-right: 1.5vw;
                 width:11vw;
-                min-width:150px;
             }
             .BannerButtons:hover {
                 box-shadow: 0 7px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
