--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                 width:14%;
                 top:1%;
             }
-            <!--mobile/small screen activation-->
+            <!--mobile aka small screen activation-->
             <!--large-->
             @media only screen and (max-width: 900px) {
                 #halftone {
@@ -141,13 +141,13 @@
                 .introduction{
                     width: 100%;
                 }
-                .BannerButtons {
+                .BannerButtons{
                     display: none;
                 }
             }
             <!--small-->
             @media only screen and (min-width: 901px) {
-                .dropdown {
+                .dropdown{
                    display: none;
                 }
             }
