--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
             }    
             .logoBox{
                 width: 7.2vw;
+                min-width: 85px;
                 height: auto;
                 position:absolute;
                 z-index: 2;
@@ -46,6 +47,7 @@
             }
             .logoTextBox{
                 width: 16vw;
+                min-width: 190px;
                 height: auto;
                 position:absolute;
                 z-index: 2;
