--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
         <script>
             <!--JQuery imported because convenient-->
             $(document).ready(function(){
-                $(window).scrollTop(0);
+                $('#TopBanner').scrollIntoView();
             });
             $('#canvas').mousedown(function(){          
                 $(this).css('cursor','move');
