--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 position:absolute;
                 z-index: 2;
                 top: 2.85vw;
-                left: 10.6vw;
+                left: clamp(133px, 10.6vw, 500px);
             }
             .logoTextBox img{
                 display:block;
