--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 height: auto;
                 position:absolute;
                 z-index: 2;
-                top: 1.9vw;
+                top: clamp(20px, 1.9vw, 800px);
                 left: 1.9vw;
             }
             .logoBox img{
