--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
                 height: auto;
                 position:absolute;
                 z-index: 2;
-                top: 2.85vw;
-                left: clamp(133px, 10.6vw, 500px);
+                top: clamp(22px, 2.85vw, 800px);
+                left: clamp(133px, 10.6vw, 800px);
             }
             .logoTextBox img{
                 display:block;
