--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
         <img id = "TopBanner" src="images/TopBanner.png">
         <img id = "temporary" src="images/LiRichardLeaf.png">
         <img id = "halftone" src="images/halftone.svg">
-        <img class = "dropdown" src="dropdown.svg">
+        <img class = "dropdown" src="dropdown.svg" onerror="this.style.display='none'">
         <a href="https://li21rich.github.io/SHSEnvironmentalAction/">
             <div class="logoBox">
                 <img src="images/birdgreen.svg" alt="Environmental Action Club Logo">
