--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
                 position: absolute;
                 top: 0px;
                 left: 0px;
-                height: 1px;
-                width: 1px;
+                height: 2px;
+                width: 100%;
             }
             #TopBanner{
                 width: 108%;
