--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
         <script>
             <!--JQuery imported because convenient-->
             $(document).ready(function(){
-                $('.referencePoint')[0].scrollIntoView();
+                $('#referencePoint').scrollIntoView(true);
             });
             $('#canvas').mousedown(function(){          
                 $(this).css('cursor','move');
