--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 overflow-x: hidden;
                 font-size: 100%;
             }    
-            .referencePoint{
+            #referencePoint{
                 position: absolute;
                 top: 0px;
                 left: 0px;
@@ -174,7 +174,7 @@
                 <img src="images/BrandText.svg" alt="Environmental Action Club Logo">
             </div>
         </a>
-        <div class = "referencePoint">
+        <div id = "referencePoint">
             <p> </p>
         </div>
         <div class="introduction">
