--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 top: 0px;
                 left: 0px;
                 height: 2px;
-                width: 100%;
+                opacity: 0.0;
             }
             #TopBanner{
                 width: 108%;
@@ -174,9 +174,7 @@
                 <img src="images/BrandText.svg" alt="Environmental Action Club Logo">
             </div>
         </a>
-        <div id = "referencePoint">
-            <p> </p>
-        </div>
+        <img id = "referencePoint" src="images/LiRichardLeaf.png">
         <div class="introduction">
             <h2 class = "introTitle">Introduction</h2>
             <p>We are a passionate team of youth environmental activists, primarily from Saratoga High School. One of our focuses are environmentally impactful bills, such as SB499, AB1423, and SB676.</p>
@@ -185,6 +183,7 @@
             <!--JQuery imported because convenient-->
             $(document).ready(function(){
                 $('#referencePoint').scrollIntoView(true);
+                $('#referencePoint').width($('#TopBanner').innerWidth());
             });
             $('#canvas').mousedown(function(){          
                 $(this).css('cursor','move');
