--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 top: 0px;
                 left: 0px;
                 height: 2px;
-                width: 100vw;
+                width: 100%;
                 opacity: 0.0;
             }
             #TopBanner{
