--- a/index.html
+++ b/index.html
@@ -152,6 +152,9 @@
                 .BannerButtons{
                     display: none;
                 }
+                Body {
+                    min-height: 100vh; /* subj to change */
+                }
             }
             @media only screen and (min-width: 921px) {
                 .dropdown{
