--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
                 overflow-y: scroll;
                 overflow-x: hidden;
                 font-size: 100%;
+                margin: 0;
+                width: 100vw;
             }    
             #referencePoint{
                 position: absolute;
@@ -151,9 +153,6 @@
                 }
                 .BannerButtons{
                     display: none;
-                }
-                Body {
-                    min-height: 100vh; /* subj to change */
                 }
             }
             @media only screen and (min-width: 921px) {
