--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
         <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
         <link href='https://fonts.googleapis.com/css?family=Montserrat|Montserrat:400,700' rel='stylesheet'>
         <style>
-            Body {
+            html{
+                width:100%;
+                height:100%;
+            }
+            body {
                 background-image: url('images/wiped.svg');
                 background-position: center top;
                 height: 222.280334728vw;
