--- a/index.html
+++ b/index.html
@@ -8,9 +8,6 @@
         <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
         <link href='https://fonts.googleapis.com/css?family=Montserrat|Montserrat:400,700' rel='stylesheet'>
         <style>
-            html{
-                width:100%;
-            }
             body {
                 background-image: url('images/wiped.svg');
                 background-position: center top;
@@ -23,7 +20,6 @@
                 overflow-x: hidden;
                 font-size: 100%;
                 margin: 0;
-                width: 100vw;
             }    
             #referencePoint{
                 position: absolute;
@@ -36,6 +32,7 @@
             #TopBanner{
                 width: 108%;
                 min-width: 1250px;
+                object-fit: contain;
                 height: auto;
                 position: relative;
                 z-index: 1;
