--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             #TopBanner{
                 width: 108%;
                 min-width: 1250px;
-                object-fit: contain;
+                object-fit: cover;
                 height: auto;
                 position: relative;
                 z-index: 1;
