--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <!--i think we should make sure it works for mobile and computer displays of any size-->
     <head>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=1">
         <title>Environmental Action</title>
         <meta charset="utf-8">
         <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
