--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
         <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
         <link href='https://fonts.googleapis.com/css?family=Montserrat|Montserrat:400,700' rel='stylesheet'>
         <style>
+            html, body {
+                overflow-x: hidden;
+            }
             body {
+                overflow-x: hidden;
                 background-image: url('images/wiped.svg');
                 background-position: center top;
                 height: 222.280334728vw;
