--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
         <link href='https://fonts.googleapis.com/css?family=Montserrat|Montserrat:400,700' rel='stylesheet'>
         <style>
-            html, body {
+            html {
                 overflow-x: hidden;
             }
             body {
