--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 background-size: cover;
                 background-attachment: scroll;
                 background-repeat: no-repeat;
-                overflow-y: scroll;
+                overflow-y: hidden;
                 overflow-x: hidden;
                 font-size: 100%;
                 margin: 0;
