--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 position: absolute;
                 border-radius: 9px;
                 border: 4px solid #37512cff;
-                background-color:transparent;
+                background-color: #F5F5EF;
                 color: #37512cff;
                 top:8.1vh;
                 font-size: clamp(1rem, 1.5vw,5.5rem);
@@ -118,7 +118,7 @@
             }
             .AboutUsButton{
                 background-color: #37512cff;
-                color: #b4f796;
+                color: #F5F5EF;
                 right: 3vw;
                 <!--float:right;-->
             }
