--- a/index.html
+++ b/index.html
@@ -88,8 +88,6 @@
                 position: absolute;
                 border-radius: 9px;
                 border: 4px solid #37512cff;
-                background-color: #F5F5EF;
-                color: #37512cff;
                 top:8.1vh;
                 font-size: clamp(1rem, 1.5vw,5.5rem);
                 font-family: 'Roboto';
@@ -104,6 +102,12 @@
                 word-wrap: break-word;
                 margin-right: 1.5vw;
                 width:11vw;
+                /*
+                background-color: #F5F5EF;
+                color: #37512cff;
+                */
+                background-color: #37512cff;
+                color: #F5F5EF;
             }
             .BannerButtons:hover {
                 box-shadow: 0 7px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
@@ -117,8 +121,10 @@
                 <!--float:right;-->
             }
             .AboutUsButton{
+                /*
                 background-color: #37512cff;
                 color: #F5F5EF;
+                */
                 right: 3vw;
                 <!--float:right;-->
             }
