--- a/index.html
+++ b/index.html
@@ -107,7 +107,8 @@
                 color: #37512cff;
                 */
                 background-color: #37512cff;
-                color: #F5F5EF;
+                <!--color: #F5F5EF;-->
+                color: #b4f796;
             }
             .BannerButtons:hover {
                 box-shadow: 0 7px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
