--- a/index.html
+++ b/index.html
@@ -123,11 +123,14 @@
                 <!--float:right;-->
             }
             .CustomLeaf{
-                content:url("images/LiRichardLeaf.png");
+                content:url("images/CustomLeaf.png");
                 position: relative;
                 height: 6%;
-                right:24vw;
                 z-index: 2;
+            }
+            .LeafThree{
+                right:24vw;
+                bottom:1.8vh;
             }
             .introduction{
                 position: relative;
