--- a/index.html
+++ b/index.html
@@ -126,10 +126,11 @@
                 content:url("images/CustomLeaf.png");
                 position: relative;
                 height: 6%;
+                width: auto;
                 z-index: 2;
             }
-            .LeafThree{
-                right:24vw;
+            .LeafOne{
+                right:1vw;
                 bottom:1.8vh;
             }
             .introduction{
