--- a/index.html
+++ b/index.html
@@ -125,13 +125,13 @@
             .CustomLeaf{
                 content:url("images/CustomLeaf.png");
                 position: relative;
-                height: 6%;
-                width: auto;
+                width: 11%;
+                height: auto;
                 z-index: 2;
             }
             .LeafOne{
-                right:1vw;
-                bottom:1.8vh;
+                right:0.1vw;
+                bottom:2.05vh;
             }
             .introduction{
                 position: relative;
