--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
             }
             .CustomLeaf{
                 content:url("images/CustomLeaf.png");
-                position: relative;
+                position: absolute;
                 width: 11%;
                 height: auto;
                 z-index: 2;
