--- a/index.html
+++ b/index.html
@@ -125,13 +125,21 @@
             .CustomLeaf{
                 content:url("images/CustomLeaf.png");
                 position: absolute;
-                width: 11%;
+                width: 7%;
                 height: auto;
                 z-index: 2;
             }
             .LeafOne{
-                right:0.1vw;
-                bottom:2.05vh;
+                right:28.1vw;
+                top:7vh;
+            }
+            .LeafTwo{
+                right:15.6vw;
+                top:7vh;
+            }
+            .LeafThree{
+                right:3.1vw;
+                top:7vh;
             }
             .introduction{
                 position: relative;
@@ -210,14 +218,13 @@
             }, false);
         </script>
         <button class="BannerButtons ArticlesButton">Articles
-            <img class = "CustomLeaf LeafOne"/>
         </button>
         <button class="BannerButtons CampaignsButton">Campaigns
-            <img class = "CustomLeaf LeafTwo"/>
         </button>
         <button class="BannerButtons AboutUsButton">About Us
-            <img class = "CustomLeaf LeafThree"/>
         </button>
-        
+        <img class = "CustomLeaf LeafOne"/>
+        <img class = "CustomLeaf LeafTwo"/>
+        <img class = "CustomLeaf LeafThree"/>
     </body>
 </html>
