--- a/index.html
+++ b/index.html
@@ -125,21 +125,24 @@
             .CustomLeaf{
                 content:url("images/CustomLeaf.png");
                 position: absolute;
-                width: 5%;
+                width: 4.8%;
                 height: auto;
                 z-index: 2;
             }
             .LeafOne{
-                right:28.1vw;
+                right:27.6vw;
                 top:4vh;
+                transform: rotate(320deg);
             }
             .LeafTwo{
                 right:15.6vw;
-                top:7vh;
+                top:4.1vh;
+                transform: rotate(15deg);
             }
             .LeafThree{
                 right:3.1vw;
-                top:7vh;
+                top:7.2vh;
+                transform: rotate(85deg);
             }
             .introduction{
                 position: relative;
