--- a/index.html
+++ b/index.html
@@ -167,6 +167,21 @@
                 width:14%;
                 top:1%;
             }
+            .Mission{
+                position: relative;
+                float: left;
+                left: 2.7%;
+                top: -0.2%;
+                width: 43%;
+                padding: 1%;
+                font-family: Montserrat;
+                font-size: clamp(1rem, 1.4vw, 4.5rem);
+                line-height:1.37;
+            }
+            .MissionStatement{
+                position: relative;
+                font-size: clamp(1.17rem, 2vw, 6.4rem);
+            }
             @media only screen and (max-width: 920px) {
                 #halftone {
                     display: none;
@@ -203,6 +218,20 @@
         <div class="introduction">
             <h2 class = "introTitle">Introduction</h2>
             <p>We are a passionate team of youth environmental activists, primarily from Saratoga High School. One of our focuses are environmentally impactful bills, such as SB499, AB1423, and SB676.</p>
+        </div>
+        <div class="Mission">
+            <h2 class = "MissionStatement">MISSION STATEMENT</h2>
+            <p>
+                <br /><br />Our club’s mission is to advocate for positive environmental change, both at the local and state level. <br />
+                <br />
+                Our goal is to create a<br />
+                <ul>
+                  <li>Safer</li>
+                  <li>Healthier</li>
+                  <li>Environmentally Friendlier</li>
+                </ul>
+                home for both residents of Saratoga and California as a whole.
+            </p>
         </div>
         <script>
             <!--JQuery imported because convenient-->
