--- a/index.html
+++ b/index.html
@@ -177,10 +177,14 @@
                 font-family: Montserrat;
                 font-size: clamp(1rem, 1.4vw, 4.5rem);
                 line-height:1.37;
+                text-align: left;
             }
             .MissionStatement{
                 position: relative;
-                font-size: clamp(1.17rem, 2vw, 6.4rem);
+                font-size: clamp(1.17rem, 1.9vw, 6.4rem);
+                font-weight: 400;
+                text-align: center;
+                text-decoration: underline;
             }
             @media only screen and (max-width: 920px) {
                 #halftone {
@@ -222,7 +226,7 @@
         <div class="Mission">
             <h2 class = "MissionStatement">MISSION STATEMENT</h2>
             <p>
-                <br /><br />Our club’s mission is to advocate for positive environmental change, both at the local and state level. <br />
+                <br />Our club’s mission is to advocate for positive environmental change, both at the local and state level. <br />
                 <br />
                 Our goal is to create a<br />
                 <ul>
