--- a/index.html
+++ b/index.html
@@ -186,6 +186,13 @@
                 text-align: center;
                 text-decoration: underline;
             }
+            #EnvironmentalPhoto{
+                position: relative;
+                float: left;
+                left: 4%;
+                width: 20%;
+                padding: 4%;
+            }
             @media only screen and (max-width: 920px) {
                 #halftone {
                     display: none;
@@ -223,6 +230,7 @@
             <h2 class = "introTitle">Introduction</h2>
             <p>We are a passionate team of youth environmental activists, primarily from Saratoga High School. One of our focuses are environmentally impactful bills, such as SB499, AB1423, and SB676.</p>
         </div>
+        <img id = "EnvironmentalPhoto" src = "images/Grassbird.jpg">
         <div class="Mission">
             <h2 class = "MissionStatement">MISSION STATEMENT</h2>
             <p>
