--- a/index.html
+++ b/index.html
@@ -154,6 +154,7 @@
                 font-family: Montserrat;
                 font-size: clamp(1rem, 1.4vw, 4.5rem);
                 line-height:1.37;
+                clear: both;
             }
             .introTitle{
                 position: relative;
@@ -189,9 +190,12 @@
             #EnvironmentalPhoto{
                 position: relative;
                 float: left;
-                left: 4%;
+                left: -1%;
+                top: 10%;
                 width: 20%;
                 padding: 4%;
+                clear: both;
+                border: 9px solid #555;
             }
             @media only screen and (max-width: 920px) {
                 #halftone {
